set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt5 COMPONENTS Core Network REQUIRED)

add_library(QtAwsAppStream
  appstreamclient.h
  appstreamclient_p.h
  appstreamrequest.h
  appstreamrequest_p.h
  appstreamresponse.h
  appstreamresponse_p.h
  associatefleetrequest.h
  associatefleetrequest_p.h
  associatefleetresponse.h
  associatefleetresponse_p.h
  batchassociateuserstackrequest.h
  batchassociateuserstackrequest_p.h
  batchassociateuserstackresponse.h
  batchassociateuserstackresponse_p.h
  batchdisassociateuserstackrequest.h
  batchdisassociateuserstackrequest_p.h
  batchdisassociateuserstackresponse.h
  batchdisassociateuserstackresponse_p.h
  copyimagerequest.h
  copyimagerequest_p.h
  copyimageresponse.h
  copyimageresponse_p.h
  createdirectoryconfigrequest.h
  createdirectoryconfigrequest_p.h
  createdirectoryconfigresponse.h
  createdirectoryconfigresponse_p.h
  createfleetrequest.h
  createfleetrequest_p.h
  createfleetresponse.h
  createfleetresponse_p.h
  createimagebuilderrequest.h
  createimagebuilderrequest_p.h
  createimagebuilderresponse.h
  createimagebuilderresponse_p.h
  createimagebuilderstreamingurlrequest.h
  createimagebuilderstreamingurlrequest_p.h
  createimagebuilderstreamingurlresponse.h
  createimagebuilderstreamingurlresponse_p.h
  createstackrequest.h
  createstackrequest_p.h
  createstackresponse.h
  createstackresponse_p.h
  createstreamingurlrequest.h
  createstreamingurlrequest_p.h
  createstreamingurlresponse.h
  createstreamingurlresponse_p.h
  createupdatedimagerequest.h
  createupdatedimagerequest_p.h
  createupdatedimageresponse.h
  createupdatedimageresponse_p.h
  createusagereportsubscriptionrequest.h
  createusagereportsubscriptionrequest_p.h
  createusagereportsubscriptionresponse.h
  createusagereportsubscriptionresponse_p.h
  createuserrequest.h
  createuserrequest_p.h
  createuserresponse.h
  createuserresponse_p.h
  deletedirectoryconfigrequest.h
  deletedirectoryconfigrequest_p.h
  deletedirectoryconfigresponse.h
  deletedirectoryconfigresponse_p.h
  deletefleetrequest.h
  deletefleetrequest_p.h
  deletefleetresponse.h
  deletefleetresponse_p.h
  deleteimagebuilderrequest.h
  deleteimagebuilderrequest_p.h
  deleteimagebuilderresponse.h
  deleteimagebuilderresponse_p.h
  deleteimagepermissionsrequest.h
  deleteimagepermissionsrequest_p.h
  deleteimagepermissionsresponse.h
  deleteimagepermissionsresponse_p.h
  deleteimagerequest.h
  deleteimagerequest_p.h
  deleteimageresponse.h
  deleteimageresponse_p.h
  deletestackrequest.h
  deletestackrequest_p.h
  deletestackresponse.h
  deletestackresponse_p.h
  deleteusagereportsubscriptionrequest.h
  deleteusagereportsubscriptionrequest_p.h
  deleteusagereportsubscriptionresponse.h
  deleteusagereportsubscriptionresponse_p.h
  deleteuserrequest.h
  deleteuserrequest_p.h
  deleteuserresponse.h
  deleteuserresponse_p.h
  describedirectoryconfigsrequest.h
  describedirectoryconfigsrequest_p.h
  describedirectoryconfigsresponse.h
  describedirectoryconfigsresponse_p.h
  describefleetsrequest.h
  describefleetsrequest_p.h
  describefleetsresponse.h
  describefleetsresponse_p.h
  describeimagebuildersrequest.h
  describeimagebuildersrequest_p.h
  describeimagebuildersresponse.h
  describeimagebuildersresponse_p.h
  describeimagepermissionsrequest.h
  describeimagepermissionsrequest_p.h
  describeimagepermissionsresponse.h
  describeimagepermissionsresponse_p.h
  describeimagesrequest.h
  describeimagesrequest_p.h
  describeimagesresponse.h
  describeimagesresponse_p.h
  describesessionsrequest.h
  describesessionsrequest_p.h
  describesessionsresponse.h
  describesessionsresponse_p.h
  describestacksrequest.h
  describestacksrequest_p.h
  describestacksresponse.h
  describestacksresponse_p.h
  describeusagereportsubscriptionsrequest.h
  describeusagereportsubscriptionsrequest_p.h
  describeusagereportsubscriptionsresponse.h
  describeusagereportsubscriptionsresponse_p.h
  describeusersrequest.h
  describeusersrequest_p.h
  describeusersresponse.h
  describeusersresponse_p.h
  describeuserstackassociationsrequest.h
  describeuserstackassociationsrequest_p.h
  describeuserstackassociationsresponse.h
  describeuserstackassociationsresponse_p.h
  disableuserrequest.h
  disableuserrequest_p.h
  disableuserresponse.h
  disableuserresponse_p.h
  disassociatefleetrequest.h
  disassociatefleetrequest_p.h
  disassociatefleetresponse.h
  disassociatefleetresponse_p.h
  enableuserrequest.h
  enableuserrequest_p.h
  enableuserresponse.h
  enableuserresponse_p.h
  expiresessionrequest.h
  expiresessionrequest_p.h
  expiresessionresponse.h
  expiresessionresponse_p.h
  listassociatedfleetsrequest.h
  listassociatedfleetsrequest_p.h
  listassociatedfleetsresponse.h
  listassociatedfleetsresponse_p.h
  listassociatedstacksrequest.h
  listassociatedstacksrequest_p.h
  listassociatedstacksresponse.h
  listassociatedstacksresponse_p.h
  listtagsforresourcerequest.h
  listtagsforresourcerequest_p.h
  listtagsforresourceresponse.h
  listtagsforresourceresponse_p.h
  startfleetrequest.h
  startfleetrequest_p.h
  startfleetresponse.h
  startfleetresponse_p.h
  startimagebuilderrequest.h
  startimagebuilderrequest_p.h
  startimagebuilderresponse.h
  startimagebuilderresponse_p.h
  stopfleetrequest.h
  stopfleetrequest_p.h
  stopfleetresponse.h
  stopfleetresponse_p.h
  stopimagebuilderrequest.h
  stopimagebuilderrequest_p.h
  stopimagebuilderresponse.h
  stopimagebuilderresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updatedirectoryconfigrequest.h
  updatedirectoryconfigrequest_p.h
  updatedirectoryconfigresponse.h
  updatedirectoryconfigresponse_p.h
  updatefleetrequest.h
  updatefleetrequest_p.h
  updatefleetresponse.h
  updatefleetresponse_p.h
  updateimagepermissionsrequest.h
  updateimagepermissionsrequest_p.h
  updateimagepermissionsresponse.h
  updateimagepermissionsresponse_p.h
  updatestackrequest.h
  updatestackrequest_p.h
  updatestackresponse.h
  updatestackresponse_p.h
  appstreamclient.cpp
  appstreamrequest.cpp
  appstreamresponse.cpp
  associatefleetrequest.cpp
  associatefleetresponse.cpp
  batchassociateuserstackrequest.cpp
  batchassociateuserstackresponse.cpp
  batchdisassociateuserstackrequest.cpp
  batchdisassociateuserstackresponse.cpp
  copyimagerequest.cpp
  copyimageresponse.cpp
  createdirectoryconfigrequest.cpp
  createdirectoryconfigresponse.cpp
  createfleetrequest.cpp
  createfleetresponse.cpp
  createimagebuilderrequest.cpp
  createimagebuilderresponse.cpp
  createimagebuilderstreamingurlrequest.cpp
  createimagebuilderstreamingurlresponse.cpp
  createstackrequest.cpp
  createstackresponse.cpp
  createstreamingurlrequest.cpp
  createstreamingurlresponse.cpp
  createupdatedimagerequest.cpp
  createupdatedimageresponse.cpp
  createusagereportsubscriptionrequest.cpp
  createusagereportsubscriptionresponse.cpp
  createuserrequest.cpp
  createuserresponse.cpp
  deletedirectoryconfigrequest.cpp
  deletedirectoryconfigresponse.cpp
  deletefleetrequest.cpp
  deletefleetresponse.cpp
  deleteimagebuilderrequest.cpp
  deleteimagebuilderresponse.cpp
  deleteimagepermissionsrequest.cpp
  deleteimagepermissionsresponse.cpp
  deleteimagerequest.cpp
  deleteimageresponse.cpp
  deletestackrequest.cpp
  deletestackresponse.cpp
  deleteusagereportsubscriptionrequest.cpp
  deleteusagereportsubscriptionresponse.cpp
  deleteuserrequest.cpp
  deleteuserresponse.cpp
  describedirectoryconfigsrequest.cpp
  describedirectoryconfigsresponse.cpp
  describefleetsrequest.cpp
  describefleetsresponse.cpp
  describeimagebuildersrequest.cpp
  describeimagebuildersresponse.cpp
  describeimagepermissionsrequest.cpp
  describeimagepermissionsresponse.cpp
  describeimagesrequest.cpp
  describeimagesresponse.cpp
  describesessionsrequest.cpp
  describesessionsresponse.cpp
  describestacksrequest.cpp
  describestacksresponse.cpp
  describeusagereportsubscriptionsrequest.cpp
  describeusagereportsubscriptionsresponse.cpp
  describeusersrequest.cpp
  describeusersresponse.cpp
  describeuserstackassociationsrequest.cpp
  describeuserstackassociationsresponse.cpp
  disableuserrequest.cpp
  disableuserresponse.cpp
  disassociatefleetrequest.cpp
  disassociatefleetresponse.cpp
  enableuserrequest.cpp
  enableuserresponse.cpp
  expiresessionrequest.cpp
  expiresessionresponse.cpp
  listassociatedfleetsrequest.cpp
  listassociatedfleetsresponse.cpp
  listassociatedstacksrequest.cpp
  listassociatedstacksresponse.cpp
  listtagsforresourcerequest.cpp
  listtagsforresourceresponse.cpp
  startfleetrequest.cpp
  startfleetresponse.cpp
  startimagebuilderrequest.cpp
  startimagebuilderresponse.cpp
  stopfleetrequest.cpp
  stopfleetresponse.cpp
  stopimagebuilderrequest.cpp
  stopimagebuilderresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updatedirectoryconfigrequest.cpp
  updatedirectoryconfigresponse.cpp
  updatefleetrequest.cpp
  updatefleetresponse.cpp
  updateimagepermissionsrequest.cpp
  updateimagepermissionsresponse.cpp
  updatestackrequest.cpp
  updatestackresponse.cpp)

add_dependencies(QtAwsAppStream QtAwsCore)

target_link_libraries(QtAwsAppStream PRIVATE Qt5::Core Qt5::Network)
