add_compile_definitions(QTAWSAPPSTREAM_LIBRARY)

add_library(QtAwsAppStream
  qtawsappstreamglobal.h
  appstreamclient.h
  appstreamclient_p.h
  appstreamrequest.h
  appstreamrequest_p.h
  appstreamresponse.h
  appstreamresponse_p.h
  associateapplicationfleetrequest.h
  associateapplicationfleetrequest_p.h
  associateapplicationfleetresponse.h
  associateapplicationfleetresponse_p.h
  associateapplicationtoentitlementrequest.h
  associateapplicationtoentitlementrequest_p.h
  associateapplicationtoentitlementresponse.h
  associateapplicationtoentitlementresponse_p.h
  associatefleetrequest.h
  associatefleetrequest_p.h
  associatefleetresponse.h
  associatefleetresponse_p.h
  batchassociateuserstackrequest.h
  batchassociateuserstackrequest_p.h
  batchassociateuserstackresponse.h
  batchassociateuserstackresponse_p.h
  batchdisassociateuserstackrequest.h
  batchdisassociateuserstackrequest_p.h
  batchdisassociateuserstackresponse.h
  batchdisassociateuserstackresponse_p.h
  copyimagerequest.h
  copyimagerequest_p.h
  copyimageresponse.h
  copyimageresponse_p.h
  createappblockrequest.h
  createappblockrequest_p.h
  createappblockresponse.h
  createappblockresponse_p.h
  createapplicationrequest.h
  createapplicationrequest_p.h
  createapplicationresponse.h
  createapplicationresponse_p.h
  createdirectoryconfigrequest.h
  createdirectoryconfigrequest_p.h
  createdirectoryconfigresponse.h
  createdirectoryconfigresponse_p.h
  createentitlementrequest.h
  createentitlementrequest_p.h
  createentitlementresponse.h
  createentitlementresponse_p.h
  createfleetrequest.h
  createfleetrequest_p.h
  createfleetresponse.h
  createfleetresponse_p.h
  createimagebuilderrequest.h
  createimagebuilderrequest_p.h
  createimagebuilderresponse.h
  createimagebuilderresponse_p.h
  createimagebuilderstreamingurlrequest.h
  createimagebuilderstreamingurlrequest_p.h
  createimagebuilderstreamingurlresponse.h
  createimagebuilderstreamingurlresponse_p.h
  createstackrequest.h
  createstackrequest_p.h
  createstackresponse.h
  createstackresponse_p.h
  createstreamingurlrequest.h
  createstreamingurlrequest_p.h
  createstreamingurlresponse.h
  createstreamingurlresponse_p.h
  createupdatedimagerequest.h
  createupdatedimagerequest_p.h
  createupdatedimageresponse.h
  createupdatedimageresponse_p.h
  createusagereportsubscriptionrequest.h
  createusagereportsubscriptionrequest_p.h
  createusagereportsubscriptionresponse.h
  createusagereportsubscriptionresponse_p.h
  createuserrequest.h
  createuserrequest_p.h
  createuserresponse.h
  createuserresponse_p.h
  deleteappblockrequest.h
  deleteappblockrequest_p.h
  deleteappblockresponse.h
  deleteappblockresponse_p.h
  deleteapplicationrequest.h
  deleteapplicationrequest_p.h
  deleteapplicationresponse.h
  deleteapplicationresponse_p.h
  deletedirectoryconfigrequest.h
  deletedirectoryconfigrequest_p.h
  deletedirectoryconfigresponse.h
  deletedirectoryconfigresponse_p.h
  deleteentitlementrequest.h
  deleteentitlementrequest_p.h
  deleteentitlementresponse.h
  deleteentitlementresponse_p.h
  deletefleetrequest.h
  deletefleetrequest_p.h
  deletefleetresponse.h
  deletefleetresponse_p.h
  deleteimagerequest.h
  deleteimagerequest_p.h
  deleteimageresponse.h
  deleteimageresponse_p.h
  deleteimagebuilderrequest.h
  deleteimagebuilderrequest_p.h
  deleteimagebuilderresponse.h
  deleteimagebuilderresponse_p.h
  deleteimagepermissionsrequest.h
  deleteimagepermissionsrequest_p.h
  deleteimagepermissionsresponse.h
  deleteimagepermissionsresponse_p.h
  deletestackrequest.h
  deletestackrequest_p.h
  deletestackresponse.h
  deletestackresponse_p.h
  deleteusagereportsubscriptionrequest.h
  deleteusagereportsubscriptionrequest_p.h
  deleteusagereportsubscriptionresponse.h
  deleteusagereportsubscriptionresponse_p.h
  deleteuserrequest.h
  deleteuserrequest_p.h
  deleteuserresponse.h
  deleteuserresponse_p.h
  describeappblocksrequest.h
  describeappblocksrequest_p.h
  describeappblocksresponse.h
  describeappblocksresponse_p.h
  describeapplicationfleetassociationsrequest.h
  describeapplicationfleetassociationsrequest_p.h
  describeapplicationfleetassociationsresponse.h
  describeapplicationfleetassociationsresponse_p.h
  describeapplicationsrequest.h
  describeapplicationsrequest_p.h
  describeapplicationsresponse.h
  describeapplicationsresponse_p.h
  describedirectoryconfigsrequest.h
  describedirectoryconfigsrequest_p.h
  describedirectoryconfigsresponse.h
  describedirectoryconfigsresponse_p.h
  describeentitlementsrequest.h
  describeentitlementsrequest_p.h
  describeentitlementsresponse.h
  describeentitlementsresponse_p.h
  describefleetsrequest.h
  describefleetsrequest_p.h
  describefleetsresponse.h
  describefleetsresponse_p.h
  describeimagebuildersrequest.h
  describeimagebuildersrequest_p.h
  describeimagebuildersresponse.h
  describeimagebuildersresponse_p.h
  describeimagepermissionsrequest.h
  describeimagepermissionsrequest_p.h
  describeimagepermissionsresponse.h
  describeimagepermissionsresponse_p.h
  describeimagesrequest.h
  describeimagesrequest_p.h
  describeimagesresponse.h
  describeimagesresponse_p.h
  describesessionsrequest.h
  describesessionsrequest_p.h
  describesessionsresponse.h
  describesessionsresponse_p.h
  describestacksrequest.h
  describestacksrequest_p.h
  describestacksresponse.h
  describestacksresponse_p.h
  describeusagereportsubscriptionsrequest.h
  describeusagereportsubscriptionsrequest_p.h
  describeusagereportsubscriptionsresponse.h
  describeusagereportsubscriptionsresponse_p.h
  describeuserstackassociationsrequest.h
  describeuserstackassociationsrequest_p.h
  describeuserstackassociationsresponse.h
  describeuserstackassociationsresponse_p.h
  describeusersrequest.h
  describeusersrequest_p.h
  describeusersresponse.h
  describeusersresponse_p.h
  disableuserrequest.h
  disableuserrequest_p.h
  disableuserresponse.h
  disableuserresponse_p.h
  disassociateapplicationfleetrequest.h
  disassociateapplicationfleetrequest_p.h
  disassociateapplicationfleetresponse.h
  disassociateapplicationfleetresponse_p.h
  disassociateapplicationfromentitlementrequest.h
  disassociateapplicationfromentitlementrequest_p.h
  disassociateapplicationfromentitlementresponse.h
  disassociateapplicationfromentitlementresponse_p.h
  disassociatefleetrequest.h
  disassociatefleetrequest_p.h
  disassociatefleetresponse.h
  disassociatefleetresponse_p.h
  enableuserrequest.h
  enableuserrequest_p.h
  enableuserresponse.h
  enableuserresponse_p.h
  expiresessionrequest.h
  expiresessionrequest_p.h
  expiresessionresponse.h
  expiresessionresponse_p.h
  listassociatedfleetsrequest.h
  listassociatedfleetsrequest_p.h
  listassociatedfleetsresponse.h
  listassociatedfleetsresponse_p.h
  listassociatedstacksrequest.h
  listassociatedstacksrequest_p.h
  listassociatedstacksresponse.h
  listassociatedstacksresponse_p.h
  listentitledapplicationsrequest.h
  listentitledapplicationsrequest_p.h
  listentitledapplicationsresponse.h
  listentitledapplicationsresponse_p.h
  listtagsforresourcerequest.h
  listtagsforresourcerequest_p.h
  listtagsforresourceresponse.h
  listtagsforresourceresponse_p.h
  startfleetrequest.h
  startfleetrequest_p.h
  startfleetresponse.h
  startfleetresponse_p.h
  startimagebuilderrequest.h
  startimagebuilderrequest_p.h
  startimagebuilderresponse.h
  startimagebuilderresponse_p.h
  stopfleetrequest.h
  stopfleetrequest_p.h
  stopfleetresponse.h
  stopfleetresponse_p.h
  stopimagebuilderrequest.h
  stopimagebuilderrequest_p.h
  stopimagebuilderresponse.h
  stopimagebuilderresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updateapplicationrequest.h
  updateapplicationrequest_p.h
  updateapplicationresponse.h
  updateapplicationresponse_p.h
  updatedirectoryconfigrequest.h
  updatedirectoryconfigrequest_p.h
  updatedirectoryconfigresponse.h
  updatedirectoryconfigresponse_p.h
  updateentitlementrequest.h
  updateentitlementrequest_p.h
  updateentitlementresponse.h
  updateentitlementresponse_p.h
  updatefleetrequest.h
  updatefleetrequest_p.h
  updatefleetresponse.h
  updatefleetresponse_p.h
  updateimagepermissionsrequest.h
  updateimagepermissionsrequest_p.h
  updateimagepermissionsresponse.h
  updateimagepermissionsresponse_p.h
  updatestackrequest.h
  updatestackrequest_p.h
  updatestackresponse.h
  updatestackresponse_p.h
  appstreamclient.cpp
  appstreamrequest.cpp
  appstreamresponse.cpp
  associateapplicationfleetrequest.cpp
  associateapplicationfleetresponse.cpp
  associateapplicationtoentitlementrequest.cpp
  associateapplicationtoentitlementresponse.cpp
  associatefleetrequest.cpp
  associatefleetresponse.cpp
  batchassociateuserstackrequest.cpp
  batchassociateuserstackresponse.cpp
  batchdisassociateuserstackrequest.cpp
  batchdisassociateuserstackresponse.cpp
  copyimagerequest.cpp
  copyimageresponse.cpp
  createappblockrequest.cpp
  createappblockresponse.cpp
  createapplicationrequest.cpp
  createapplicationresponse.cpp
  createdirectoryconfigrequest.cpp
  createdirectoryconfigresponse.cpp
  createentitlementrequest.cpp
  createentitlementresponse.cpp
  createfleetrequest.cpp
  createfleetresponse.cpp
  createimagebuilderrequest.cpp
  createimagebuilderresponse.cpp
  createimagebuilderstreamingurlrequest.cpp
  createimagebuilderstreamingurlresponse.cpp
  createstackrequest.cpp
  createstackresponse.cpp
  createstreamingurlrequest.cpp
  createstreamingurlresponse.cpp
  createupdatedimagerequest.cpp
  createupdatedimageresponse.cpp
  createusagereportsubscriptionrequest.cpp
  createusagereportsubscriptionresponse.cpp
  createuserrequest.cpp
  createuserresponse.cpp
  deleteappblockrequest.cpp
  deleteappblockresponse.cpp
  deleteapplicationrequest.cpp
  deleteapplicationresponse.cpp
  deletedirectoryconfigrequest.cpp
  deletedirectoryconfigresponse.cpp
  deleteentitlementrequest.cpp
  deleteentitlementresponse.cpp
  deletefleetrequest.cpp
  deletefleetresponse.cpp
  deleteimagerequest.cpp
  deleteimageresponse.cpp
  deleteimagebuilderrequest.cpp
  deleteimagebuilderresponse.cpp
  deleteimagepermissionsrequest.cpp
  deleteimagepermissionsresponse.cpp
  deletestackrequest.cpp
  deletestackresponse.cpp
  deleteusagereportsubscriptionrequest.cpp
  deleteusagereportsubscriptionresponse.cpp
  deleteuserrequest.cpp
  deleteuserresponse.cpp
  describeappblocksrequest.cpp
  describeappblocksresponse.cpp
  describeapplicationfleetassociationsrequest.cpp
  describeapplicationfleetassociationsresponse.cpp
  describeapplicationsrequest.cpp
  describeapplicationsresponse.cpp
  describedirectoryconfigsrequest.cpp
  describedirectoryconfigsresponse.cpp
  describeentitlementsrequest.cpp
  describeentitlementsresponse.cpp
  describefleetsrequest.cpp
  describefleetsresponse.cpp
  describeimagebuildersrequest.cpp
  describeimagebuildersresponse.cpp
  describeimagepermissionsrequest.cpp
  describeimagepermissionsresponse.cpp
  describeimagesrequest.cpp
  describeimagesresponse.cpp
  describesessionsrequest.cpp
  describesessionsresponse.cpp
  describestacksrequest.cpp
  describestacksresponse.cpp
  describeusagereportsubscriptionsrequest.cpp
  describeusagereportsubscriptionsresponse.cpp
  describeuserstackassociationsrequest.cpp
  describeuserstackassociationsresponse.cpp
  describeusersrequest.cpp
  describeusersresponse.cpp
  disableuserrequest.cpp
  disableuserresponse.cpp
  disassociateapplicationfleetrequest.cpp
  disassociateapplicationfleetresponse.cpp
  disassociateapplicationfromentitlementrequest.cpp
  disassociateapplicationfromentitlementresponse.cpp
  disassociatefleetrequest.cpp
  disassociatefleetresponse.cpp
  enableuserrequest.cpp
  enableuserresponse.cpp
  expiresessionrequest.cpp
  expiresessionresponse.cpp
  listassociatedfleetsrequest.cpp
  listassociatedfleetsresponse.cpp
  listassociatedstacksrequest.cpp
  listassociatedstacksresponse.cpp
  listentitledapplicationsrequest.cpp
  listentitledapplicationsresponse.cpp
  listtagsforresourcerequest.cpp
  listtagsforresourceresponse.cpp
  startfleetrequest.cpp
  startfleetresponse.cpp
  startimagebuilderrequest.cpp
  startimagebuilderresponse.cpp
  stopfleetrequest.cpp
  stopfleetresponse.cpp
  stopimagebuilderrequest.cpp
  stopimagebuilderresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updateapplicationrequest.cpp
  updateapplicationresponse.cpp
  updatedirectoryconfigrequest.cpp
  updatedirectoryconfigresponse.cpp
  updateentitlementrequest.cpp
  updateentitlementresponse.cpp
  updatefleetrequest.cpp
  updatefleetresponse.cpp
  updateimagepermissionsrequest.cpp
  updateimagepermissionsresponse.cpp
  updatestackrequest.cpp
  updatestackresponse.cpp)

target_link_libraries(QtAwsAppStream
  PRIVATE QtAwsCore
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
