add_compile_definitions(QTAWSAPPSYNC_LIBRARY)

add_library(QtAwsAppSync
  appsyncclient.h
  appsyncclient_p.h
  appsyncrequest.h
  appsyncrequest_p.h
  appsyncresponse.h
  appsyncresponse_p.h
  createapicacherequest.h
  createapicacherequest_p.h
  createapicacheresponse.h
  createapicacheresponse_p.h
  createapikeyrequest.h
  createapikeyrequest_p.h
  createapikeyresponse.h
  createapikeyresponse_p.h
  createdatasourcerequest.h
  createdatasourcerequest_p.h
  createdatasourceresponse.h
  createdatasourceresponse_p.h
  createfunctionrequest.h
  createfunctionrequest_p.h
  createfunctionresponse.h
  createfunctionresponse_p.h
  creategraphqlapirequest.h
  creategraphqlapirequest_p.h
  creategraphqlapiresponse.h
  creategraphqlapiresponse_p.h
  createresolverrequest.h
  createresolverrequest_p.h
  createresolverresponse.h
  createresolverresponse_p.h
  createtyperequest.h
  createtyperequest_p.h
  createtyperesponse.h
  createtyperesponse_p.h
  deleteapicacherequest.h
  deleteapicacherequest_p.h
  deleteapicacheresponse.h
  deleteapicacheresponse_p.h
  deleteapikeyrequest.h
  deleteapikeyrequest_p.h
  deleteapikeyresponse.h
  deleteapikeyresponse_p.h
  deletedatasourcerequest.h
  deletedatasourcerequest_p.h
  deletedatasourceresponse.h
  deletedatasourceresponse_p.h
  deletefunctionrequest.h
  deletefunctionrequest_p.h
  deletefunctionresponse.h
  deletefunctionresponse_p.h
  deletegraphqlapirequest.h
  deletegraphqlapirequest_p.h
  deletegraphqlapiresponse.h
  deletegraphqlapiresponse_p.h
  deleteresolverrequest.h
  deleteresolverrequest_p.h
  deleteresolverresponse.h
  deleteresolverresponse_p.h
  deletetyperequest.h
  deletetyperequest_p.h
  deletetyperesponse.h
  deletetyperesponse_p.h
  flushapicacherequest.h
  flushapicacherequest_p.h
  flushapicacheresponse.h
  flushapicacheresponse_p.h
  getapicacherequest.h
  getapicacherequest_p.h
  getapicacheresponse.h
  getapicacheresponse_p.h
  getdatasourcerequest.h
  getdatasourcerequest_p.h
  getdatasourceresponse.h
  getdatasourceresponse_p.h
  getfunctionrequest.h
  getfunctionrequest_p.h
  getfunctionresponse.h
  getfunctionresponse_p.h
  getgraphqlapirequest.h
  getgraphqlapirequest_p.h
  getgraphqlapiresponse.h
  getgraphqlapiresponse_p.h
  getintrospectionschemarequest.h
  getintrospectionschemarequest_p.h
  getintrospectionschemaresponse.h
  getintrospectionschemaresponse_p.h
  getresolverrequest.h
  getresolverrequest_p.h
  getresolverresponse.h
  getresolverresponse_p.h
  getschemacreationstatusrequest.h
  getschemacreationstatusrequest_p.h
  getschemacreationstatusresponse.h
  getschemacreationstatusresponse_p.h
  gettyperequest.h
  gettyperequest_p.h
  gettyperesponse.h
  gettyperesponse_p.h
  listapikeysrequest.h
  listapikeysrequest_p.h
  listapikeysresponse.h
  listapikeysresponse_p.h
  listdatasourcesrequest.h
  listdatasourcesrequest_p.h
  listdatasourcesresponse.h
  listdatasourcesresponse_p.h
  listfunctionsrequest.h
  listfunctionsrequest_p.h
  listfunctionsresponse.h
  listfunctionsresponse_p.h
  listgraphqlapisrequest.h
  listgraphqlapisrequest_p.h
  listgraphqlapisresponse.h
  listgraphqlapisresponse_p.h
  listresolversbyfunctionrequest.h
  listresolversbyfunctionrequest_p.h
  listresolversbyfunctionresponse.h
  listresolversbyfunctionresponse_p.h
  listresolversrequest.h
  listresolversrequest_p.h
  listresolversresponse.h
  listresolversresponse_p.h
  listtagsforresourcerequest.h
  listtagsforresourcerequest_p.h
  listtagsforresourceresponse.h
  listtagsforresourceresponse_p.h
  listtypesrequest.h
  listtypesrequest_p.h
  listtypesresponse.h
  listtypesresponse_p.h
  qtawsappsyncglobal.h
  startschemacreationrequest.h
  startschemacreationrequest_p.h
  startschemacreationresponse.h
  startschemacreationresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updateapicacherequest.h
  updateapicacherequest_p.h
  updateapicacheresponse.h
  updateapicacheresponse_p.h
  updateapikeyrequest.h
  updateapikeyrequest_p.h
  updateapikeyresponse.h
  updateapikeyresponse_p.h
  updatedatasourcerequest.h
  updatedatasourcerequest_p.h
  updatedatasourceresponse.h
  updatedatasourceresponse_p.h
  updatefunctionrequest.h
  updatefunctionrequest_p.h
  updatefunctionresponse.h
  updatefunctionresponse_p.h
  updategraphqlapirequest.h
  updategraphqlapirequest_p.h
  updategraphqlapiresponse.h
  updategraphqlapiresponse_p.h
  updateresolverrequest.h
  updateresolverrequest_p.h
  updateresolverresponse.h
  updateresolverresponse_p.h
  updatetyperequest.h
  updatetyperequest_p.h
  updatetyperesponse.h
  updatetyperesponse_p.h
  appsyncclient.cpp
  appsyncrequest.cpp
  appsyncresponse.cpp
  createapicacherequest.cpp
  createapicacheresponse.cpp
  createapikeyrequest.cpp
  createapikeyresponse.cpp
  createdatasourcerequest.cpp
  createdatasourceresponse.cpp
  createfunctionrequest.cpp
  createfunctionresponse.cpp
  creategraphqlapirequest.cpp
  creategraphqlapiresponse.cpp
  createresolverrequest.cpp
  createresolverresponse.cpp
  createtyperequest.cpp
  createtyperesponse.cpp
  deleteapicacherequest.cpp
  deleteapicacheresponse.cpp
  deleteapikeyrequest.cpp
  deleteapikeyresponse.cpp
  deletedatasourcerequest.cpp
  deletedatasourceresponse.cpp
  deletefunctionrequest.cpp
  deletefunctionresponse.cpp
  deletegraphqlapirequest.cpp
  deletegraphqlapiresponse.cpp
  deleteresolverrequest.cpp
  deleteresolverresponse.cpp
  deletetyperequest.cpp
  deletetyperesponse.cpp
  flushapicacherequest.cpp
  flushapicacheresponse.cpp
  getapicacherequest.cpp
  getapicacheresponse.cpp
  getdatasourcerequest.cpp
  getdatasourceresponse.cpp
  getfunctionrequest.cpp
  getfunctionresponse.cpp
  getgraphqlapirequest.cpp
  getgraphqlapiresponse.cpp
  getintrospectionschemarequest.cpp
  getintrospectionschemaresponse.cpp
  getresolverrequest.cpp
  getresolverresponse.cpp
  getschemacreationstatusrequest.cpp
  getschemacreationstatusresponse.cpp
  gettyperequest.cpp
  gettyperesponse.cpp
  listapikeysrequest.cpp
  listapikeysresponse.cpp
  listdatasourcesrequest.cpp
  listdatasourcesresponse.cpp
  listfunctionsrequest.cpp
  listfunctionsresponse.cpp
  listgraphqlapisrequest.cpp
  listgraphqlapisresponse.cpp
  listresolversbyfunctionrequest.cpp
  listresolversbyfunctionresponse.cpp
  listresolversrequest.cpp
  listresolversresponse.cpp
  listtagsforresourcerequest.cpp
  listtagsforresourceresponse.cpp
  listtypesrequest.cpp
  listtypesresponse.cpp
  startschemacreationrequest.cpp
  startschemacreationresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updateapicacherequest.cpp
  updateapicacheresponse.cpp
  updateapikeyrequest.cpp
  updateapikeyresponse.cpp
  updatedatasourcerequest.cpp
  updatedatasourceresponse.cpp
  updatefunctionrequest.cpp
  updatefunctionresponse.cpp
  updategraphqlapirequest.cpp
  updategraphqlapiresponse.cpp
  updateresolverrequest.cpp
  updateresolverresponse.cpp
  updatetyperequest.cpp
  updatetyperesponse.cpp)

target_link_libraries(QtAwsAppSync
  PRIVATE QtAwsCore
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
