# SPDX-FileCopyrightText: 2013-2022 Paul Colby <git@colby.id.au>
# SPDX-License-Identifier: LGPL-3.0-or-later

cmake_minimum_required(VERSION 3.0)

add_library(
  QtAwsAppSync
  qtawsappsyncglobal.h
  appsyncclient.h
  appsyncclient_p.h
  appsyncrequest.h
  appsyncrequest_p.h
  appsyncresponse.h
  appsyncresponse_p.h
  associateapirequest.h
  associateapirequest_p.h
  associateapiresponse.h
  associateapiresponse_p.h
  createapicacherequest.h
  createapicacherequest_p.h
  createapicacheresponse.h
  createapicacheresponse_p.h
  createapikeyrequest.h
  createapikeyrequest_p.h
  createapikeyresponse.h
  createapikeyresponse_p.h
  createdatasourcerequest.h
  createdatasourcerequest_p.h
  createdatasourceresponse.h
  createdatasourceresponse_p.h
  createdomainnamerequest.h
  createdomainnamerequest_p.h
  createdomainnameresponse.h
  createdomainnameresponse_p.h
  createfunctionrequest.h
  createfunctionrequest_p.h
  createfunctionresponse.h
  createfunctionresponse_p.h
  creategraphqlapirequest.h
  creategraphqlapirequest_p.h
  creategraphqlapiresponse.h
  creategraphqlapiresponse_p.h
  createresolverrequest.h
  createresolverrequest_p.h
  createresolverresponse.h
  createresolverresponse_p.h
  createtyperequest.h
  createtyperequest_p.h
  createtyperesponse.h
  createtyperesponse_p.h
  deleteapicacherequest.h
  deleteapicacherequest_p.h
  deleteapicacheresponse.h
  deleteapicacheresponse_p.h
  deleteapikeyrequest.h
  deleteapikeyrequest_p.h
  deleteapikeyresponse.h
  deleteapikeyresponse_p.h
  deletedatasourcerequest.h
  deletedatasourcerequest_p.h
  deletedatasourceresponse.h
  deletedatasourceresponse_p.h
  deletedomainnamerequest.h
  deletedomainnamerequest_p.h
  deletedomainnameresponse.h
  deletedomainnameresponse_p.h
  deletefunctionrequest.h
  deletefunctionrequest_p.h
  deletefunctionresponse.h
  deletefunctionresponse_p.h
  deletegraphqlapirequest.h
  deletegraphqlapirequest_p.h
  deletegraphqlapiresponse.h
  deletegraphqlapiresponse_p.h
  deleteresolverrequest.h
  deleteresolverrequest_p.h
  deleteresolverresponse.h
  deleteresolverresponse_p.h
  deletetyperequest.h
  deletetyperequest_p.h
  deletetyperesponse.h
  deletetyperesponse_p.h
  disassociateapirequest.h
  disassociateapirequest_p.h
  disassociateapiresponse.h
  disassociateapiresponse_p.h
  evaluatemappingtemplaterequest.h
  evaluatemappingtemplaterequest_p.h
  evaluatemappingtemplateresponse.h
  evaluatemappingtemplateresponse_p.h
  flushapicacherequest.h
  flushapicacherequest_p.h
  flushapicacheresponse.h
  flushapicacheresponse_p.h
  getapiassociationrequest.h
  getapiassociationrequest_p.h
  getapiassociationresponse.h
  getapiassociationresponse_p.h
  getapicacherequest.h
  getapicacherequest_p.h
  getapicacheresponse.h
  getapicacheresponse_p.h
  getdatasourcerequest.h
  getdatasourcerequest_p.h
  getdatasourceresponse.h
  getdatasourceresponse_p.h
  getdomainnamerequest.h
  getdomainnamerequest_p.h
  getdomainnameresponse.h
  getdomainnameresponse_p.h
  getfunctionrequest.h
  getfunctionrequest_p.h
  getfunctionresponse.h
  getfunctionresponse_p.h
  getgraphqlapirequest.h
  getgraphqlapirequest_p.h
  getgraphqlapiresponse.h
  getgraphqlapiresponse_p.h
  getintrospectionschemarequest.h
  getintrospectionschemarequest_p.h
  getintrospectionschemaresponse.h
  getintrospectionschemaresponse_p.h
  getresolverrequest.h
  getresolverrequest_p.h
  getresolverresponse.h
  getresolverresponse_p.h
  getschemacreationstatusrequest.h
  getschemacreationstatusrequest_p.h
  getschemacreationstatusresponse.h
  getschemacreationstatusresponse_p.h
  gettyperequest.h
  gettyperequest_p.h
  gettyperesponse.h
  gettyperesponse_p.h
  listapikeysrequest.h
  listapikeysrequest_p.h
  listapikeysresponse.h
  listapikeysresponse_p.h
  listdatasourcesrequest.h
  listdatasourcesrequest_p.h
  listdatasourcesresponse.h
  listdatasourcesresponse_p.h
  listdomainnamesrequest.h
  listdomainnamesrequest_p.h
  listdomainnamesresponse.h
  listdomainnamesresponse_p.h
  listfunctionsrequest.h
  listfunctionsrequest_p.h
  listfunctionsresponse.h
  listfunctionsresponse_p.h
  listgraphqlapisrequest.h
  listgraphqlapisrequest_p.h
  listgraphqlapisresponse.h
  listgraphqlapisresponse_p.h
  listresolversrequest.h
  listresolversrequest_p.h
  listresolversresponse.h
  listresolversresponse_p.h
  listresolversbyfunctionrequest.h
  listresolversbyfunctionrequest_p.h
  listresolversbyfunctionresponse.h
  listresolversbyfunctionresponse_p.h
  listtagsforresourcerequest.h
  listtagsforresourcerequest_p.h
  listtagsforresourceresponse.h
  listtagsforresourceresponse_p.h
  listtypesrequest.h
  listtypesrequest_p.h
  listtypesresponse.h
  listtypesresponse_p.h
  startschemacreationrequest.h
  startschemacreationrequest_p.h
  startschemacreationresponse.h
  startschemacreationresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updateapicacherequest.h
  updateapicacherequest_p.h
  updateapicacheresponse.h
  updateapicacheresponse_p.h
  updateapikeyrequest.h
  updateapikeyrequest_p.h
  updateapikeyresponse.h
  updateapikeyresponse_p.h
  updatedatasourcerequest.h
  updatedatasourcerequest_p.h
  updatedatasourceresponse.h
  updatedatasourceresponse_p.h
  updatedomainnamerequest.h
  updatedomainnamerequest_p.h
  updatedomainnameresponse.h
  updatedomainnameresponse_p.h
  updatefunctionrequest.h
  updatefunctionrequest_p.h
  updatefunctionresponse.h
  updatefunctionresponse_p.h
  updategraphqlapirequest.h
  updategraphqlapirequest_p.h
  updategraphqlapiresponse.h
  updategraphqlapiresponse_p.h
  updateresolverrequest.h
  updateresolverrequest_p.h
  updateresolverresponse.h
  updateresolverresponse_p.h
  updatetyperequest.h
  updatetyperequest_p.h
  updatetyperesponse.h
  updatetyperesponse_p.h
  appsyncclient.cpp
  appsyncrequest.cpp
  appsyncresponse.cpp
  associateapirequest.cpp
  associateapiresponse.cpp
  createapicacherequest.cpp
  createapicacheresponse.cpp
  createapikeyrequest.cpp
  createapikeyresponse.cpp
  createdatasourcerequest.cpp
  createdatasourceresponse.cpp
  createdomainnamerequest.cpp
  createdomainnameresponse.cpp
  createfunctionrequest.cpp
  createfunctionresponse.cpp
  creategraphqlapirequest.cpp
  creategraphqlapiresponse.cpp
  createresolverrequest.cpp
  createresolverresponse.cpp
  createtyperequest.cpp
  createtyperesponse.cpp
  deleteapicacherequest.cpp
  deleteapicacheresponse.cpp
  deleteapikeyrequest.cpp
  deleteapikeyresponse.cpp
  deletedatasourcerequest.cpp
  deletedatasourceresponse.cpp
  deletedomainnamerequest.cpp
  deletedomainnameresponse.cpp
  deletefunctionrequest.cpp
  deletefunctionresponse.cpp
  deletegraphqlapirequest.cpp
  deletegraphqlapiresponse.cpp
  deleteresolverrequest.cpp
  deleteresolverresponse.cpp
  deletetyperequest.cpp
  deletetyperesponse.cpp
  disassociateapirequest.cpp
  disassociateapiresponse.cpp
  evaluatemappingtemplaterequest.cpp
  evaluatemappingtemplateresponse.cpp
  flushapicacherequest.cpp
  flushapicacheresponse.cpp
  getapiassociationrequest.cpp
  getapiassociationresponse.cpp
  getapicacherequest.cpp
  getapicacheresponse.cpp
  getdatasourcerequest.cpp
  getdatasourceresponse.cpp
  getdomainnamerequest.cpp
  getdomainnameresponse.cpp
  getfunctionrequest.cpp
  getfunctionresponse.cpp
  getgraphqlapirequest.cpp
  getgraphqlapiresponse.cpp
  getintrospectionschemarequest.cpp
  getintrospectionschemaresponse.cpp
  getresolverrequest.cpp
  getresolverresponse.cpp
  getschemacreationstatusrequest.cpp
  getschemacreationstatusresponse.cpp
  gettyperequest.cpp
  gettyperesponse.cpp
  listapikeysrequest.cpp
  listapikeysresponse.cpp
  listdatasourcesrequest.cpp
  listdatasourcesresponse.cpp
  listdomainnamesrequest.cpp
  listdomainnamesresponse.cpp
  listfunctionsrequest.cpp
  listfunctionsresponse.cpp
  listgraphqlapisrequest.cpp
  listgraphqlapisresponse.cpp
  listresolversrequest.cpp
  listresolversresponse.cpp
  listresolversbyfunctionrequest.cpp
  listresolversbyfunctionresponse.cpp
  listtagsforresourcerequest.cpp
  listtagsforresourceresponse.cpp
  listtypesrequest.cpp
  listtypesresponse.cpp
  startschemacreationrequest.cpp
  startschemacreationresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updateapicacherequest.cpp
  updateapicacheresponse.cpp
  updateapikeyrequest.cpp
  updateapikeyresponse.cpp
  updatedatasourcerequest.cpp
  updatedatasourceresponse.cpp
  updatedomainnamerequest.cpp
  updatedomainnameresponse.cpp
  updatefunctionrequest.cpp
  updatefunctionresponse.cpp
  updategraphqlapirequest.cpp
  updategraphqlapiresponse.cpp
  updateresolverrequest.cpp
  updateresolverresponse.cpp
  updatetyperequest.cpp
  updatetyperesponse.cpp
)

target_link_libraries(QtAwsAppSync
  PRIVATE QtAwsCore
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)

target_compile_definitions(QtAwsAppSync PRIVATE QTAWSAPPSYNC_LIBRARY)
